syntax = 'proto3';
package schedulerobjects;

import "k8s.io/api/core/v1/generated.proto";

// Minimal job representation used by the scheduler.
message JobSchedulingInfo {
    uint32 lifetime = 1;
    bool atMostOnce = 2;
    bool preemptible = 3;
    bool concurrencySafe = 4;
    // Kubernetes objects that make up this job and their respective scheduling requirements.
    repeated ObjectRequirements objectRequirements = 5;
}

// Message capturing the scheduling requirements of a particular Kubernetes object.
message ObjectRequirements {
    oneof requirements {
        PodRequirements podRequirements = 1;
    }
}

// Captures the scheduling requirements of a pod.
message PodRequirements {
    // Kubernetes node selector.
    map<string, string> nodeSelector = 1;
    // Kubernetes scheduling requirements.
    k8s.io.api.core.v1.Affinity affinity = 2;
    // Kubernetes tolerations.
    repeated k8s.io.api.core.v1.Toleration tolerations = 3;
    // Pod priority. Should be mapped from the priority class name of the submitted pod.
    int32 priority = 4;
    // One of Never, PreemptLowerPriority.
    // Defaults to PreemptLowerPriority if unset.
    string preemptionPolicy = 5;
    // Sum of the resource requirements for all containers that make up this pod.
    k8s.io.api.core.v1.ResourceRequirements resourceRequirements = 6;
}